--- a/RehabilitationEquipmentUserApp/app/src/main/res/layout/activity_simulation.xml
+++ b/RehabilitationEquipmentUserApp/app/src/main/res/layout/activity_simulation.xml
@@ -167,7 +167,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="@string/type_label" />
+            android:text="@string/body_part_focus_label" />
 
         <EditText
             android:id="@+id/editTextType"
