--- a/RehabilitationEquipmentUserApp/app/src/main/res/layout/activity_simulation.xml
+++ b/RehabilitationEquipmentUserApp/app/src/main/res/layout/activity_simulation.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp"/>
+        app:layout_constraintGuide_begin="45dp"/>
 
     <LinearLayout
         android:id="@+id/titleLayout"
@@ -142,7 +142,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="@string/status_label" />
+            android:text="@string/exercise_mode_label" />
 
         <Spinner
             android:id="@+id/spinnerStatus"
